@startuml
skinparam classAttributeIconSize 0


package "Controller" #DDDDDD {
class ApplicationPOT
{
  +static getInstance()
}
}


package "UI" #DDDDDD {
class RegisterClientUI{

}
}


package "Controller" #DDDDDD {
class RegisterClientController{
+registerNewClient(name,nif,email,password,latitude,longitude,altitude,streetName,\ndoorNumber,postalCode,locality,country,creditCardNr,validityDate,CCV)
}
}


package "Model" #DDDDDD {






package "Model" #DDDDDD {
abstract class User{
-Integer id
-String email
-String password
-Integer nif
-String name
+User(email,password,nif,name)
}

package Service #DDDDDD {

class ClientService{
+ClientService()
+validateInput(name,nif,email,password,latitude,longitude,altitude,streetName,\ndoorNumber,postalCode,locality,country,creditCardNr,validityDate,CCV)
+newClient(name,nif,email,password,latitude,longitude,altitude,streetName,\ndoorNumber,postalCode,locality,country,creditCardNr,validityDate,CCV)
+registerNewClient(client)
}

}

class Client extends User

class Client{
-String credits
-Address address
-CreditCard creditCard
+Client(name,nif,email,password,latitude,longitude,altitude,streetName,doorNumber,postalCode,locality,country,
                        creditCardNr,validityDate,CCV)
}

class Address{
-Integer id
-Double latitude
-Double longitude
-Double altitude
-String streetName
-String doorNumber
-String postalCode
-String locality
-String country
+Address(latitude,longitude,altitude,streetName,doorNumber,postalCode,locality,country)
}

class CreditCard{
-Long m_creditCardNr;
-Date m_validityDate;
-Integer m_CCV;
+CreditCard(creditCardNr,validityDate,CCV)
}

}


package "Data" #DDDDDD {
class DataHandler{
+openConnection()
+closeAll()
}

 class ClientDB{
 +ClientDB()
 +addClientToDB(client)
 }

}

package "Utils" #DDDDDD {
class EncryptPassword {
+encryptPasswordMD5(password)
}

class EmailSender {
+sendEmail(email,subject,body)
}


}



RegisterClientUI ..> RegisterClientController
RegisterClientController ..> ApplicationPOT
RegisterClientController ..> ClientService
ClientService "1" --> "*" Client : creates
ClientService "1" -> "1" ClientDB : has
ClientService "1" --> "1" EmailSender : sends email using
ClientDB "1" --> "*" Client : adds
class ClientDB extends DataHandler
Client "1" --> "1" Address : has
Client "*" --> "*" CreditCard : has
User --> EncryptPassword : encrypts using

@enduml